2005-08-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_append_desktop): Fix a
	C99ism.  (#314262, Robert Jeff Mitchell)
	
2005-08-22  Manish Singh  <yosh@gimp.org>

	* gtk/gtkicontheme.h: add declaration for _gtk_icon_theme_check_reload.

	* gtk/gtkwindow.c: remove declaration of gtk_window_read_rcfiles.

2005-08-22  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwindow.c (gtk_window_client_event): 
	* gtk/gtkicontheme.c (ensure_valid_themes) 
	(_gtk_icon_theme_check_reload): Implement a clientmessage based
	scheme for makeing sure that all GTK+ applications notice if an
	icon theme has been updated. This should prevent multiple versions
	of an icon theme cache to be mapped in memory at the same time,
	which can cause excessive memory consumption.  (#313156, Chris 
	Lahey)

2005-08-22  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkicontheme.c (gtk_icon_theme_load_icon): Add a note
	regarding icon theme changes.

	* gtk/gtkiconcache.c (_gtk_icon_cache_get_icon): When returning
	pixbufs which are backed by the mmapped memory of an icon cache,
	increase the refcount of the icon cache, so that the memory is not
	munmapped away underneath the pixbuf upon icon theme changes.  
	(#314170, Kjartan Maraas)

	* docs/tools/Makefile.am (LDADDS): Add GTK_DEP_LIBS, in order 
	to link against Xext.  (#314062)

	* gtk/gtkhsv.c (paint_triangle): One more fix to prevent buffer
	overruns.  (#314081, Hans Breuer)

2005-08-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c (gtk_entry_get_layout): Clarify that the
	returned layout must not be modified.

Sat Aug 20 16:12:14 2005  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_set_model): clear
	scroll_to_path if the model changes.

	* gtk/gtkiconview.c: (gtk_icon_view_destroy),
	(gtk_icon_view_size_allocate), (gtk_icon_view_set_cursor),
	(gtk_icon_view_scroll_to_path): Handle scrolling to a path before
	we're realized, #312798