@@ -1,56 +1,41 @@
-.\"Generated by db2man.xsl. Don't modify this, modify the source.
-.de Sh \" Subsection
-.br
-.if t .Sp
-.ne 5
-.PP
-\fB\\$1\fR
-.PP
-..
-.de Sp \" Vertical space (when we can't use .PP)
-.if t .sp .5v
-.if n .sp
-..
-.de Ip \" List item
-.br
-.ie \\n(.$>=3 .ne \\$3
-.el .ne 3
-.IP "\\$1" \\$2
-..
-.TH "GTK-UPDATE-ICON-CA" 1 "" "" ""
-.SH NAME
-gtk-update-icon-cache \- Icon theme caching utility
-.SH "SYNOPSIS"
+.\" ** You probably do not want to edit this file directly **
+.\" It was generated using the DocBook XSL Stylesheets (version 1.69.1).
+.\" Instead of manually editing it, you probably should edit the DocBook XML
+.\" source for it and then use the DocBook XSL Stylesheets to regenerate it.
+.TH "GTK\-UPDATE\-ICON\-CACH" "1" "08/23/2005" "" ""
+.\" disable hyphenation
+.nh
+.\" disable justification (adjust text to left margin only)
 .ad l
-.hy 0
+.SH "NAME"
+gtk\-update\-icon\-cache \- Icon theme caching utility
+.SH "SYNOPSIS"
 .HP 22
-\fBgtk\-update\-icon\-cache\fR [\-\-force] [\-\-quiet] {iconpath}
-.ad
-.hy
-
+\fBgtk\-update\-icon\-cache\fR [\-\-force] [\-\-index\-only] [\-\-quiet] {iconpath}
 .SH "DESCRIPTION"
-
 .PP
- \fBgtk\-update\-icon\-cache\fR creates mmap()able cache files for icon themes\&.
-
+\fBgtk\-update\-icon\-cache\fR
+creates mmap()able cache files for icon themes.
 .PP
-If expects to be given the path to a icon theme directory, e\&.g\&. \fI/usr/share/icons/hicolor\fR, and writes a \fIicon\-theme\&.cache\fR containing cached information about the icons in the directory tree below the given directory\&.
-
+If expects to be given the path to a icon theme directory containing an
+\fIindex.theme\fR, e.g.
+\fI/usr/share/icons/hicolor\fR, and writes a
+\fIicon\-theme.cache\fR
+containing cached information about the icons in the directory tree below the given directory.
 .PP
-GTK+ can use the cache files created by \fBgtk\-update\-icon\-cache\fR to avoid a lot of system call and disk seek overhead when the application starts\&. Since the format of the cache files allows them to be mmap()ed shared between multiple applications, the overall memory consumption is reduced as well\&.
-
+GTK+ can use the cache files created by
+\fBgtk\-update\-icon\-cache\fR
+to avoid a lot of system call and disk seek overhead when the application starts. Since the format of the cache files allows them to be mmap()ed shared between multiple applications, the overall memory consumption is reduced as well.
 .SH "OPTIONS"
-
 .TP
 \-\-force, \-f
-Overwrite an existing cache file even if it appears to be uptodate\&.
-
+Overwrite an existing cache file even if it appears to be uptodate.
+.TP
+\-\-index\-only, \-i
+Don't include image data in the cache.
 .TP
 \-\-quiet, \-q
-Turn off verbose output\&.
-
+Turn off verbose output.
 .SH "BUGS"
-
 .PP
-None known yet\&.
-
+None known yet.
