@@ -14,20 +14,20 @@
 <cmdsynopsis>
 <command>gtk-update-icon-cache</command>
 <arg choice="opt">--force</arg>
+<arg choice="opt">--index-only</arg>
 <arg choice="opt">--quiet</arg>
 <arg choice="req">iconpath</arg>
 </cmdsynopsis>
 </refsynopsisdiv>
 
 <refsect1><title>Description</title>
-<para>
-<command>gtk-update-icon-cache</command> creates mmap()able cache files for
+<para><command>gtk-update-icon-cache</command> creates mmap()able cache files for
 icon themes. 
 </para>
 <para>
-If expects to be given the path to a icon theme directory, e.g. 
-<filename>/usr/share/icons/hicolor</filename>, and writes a 
-<filename>icon-theme.cache</filename> containing cached information
+If expects to be given the path to a icon theme directory containing an
+<filename>index.theme</filename>, e.g. <filename>/usr/share/icons/hicolor</filename>, 
+and writes a <filename>icon-theme.cache</filename> containing cached information
 about the icons in the directory tree below the given directory.
 </para>
 <para>
@@ -46,6 +46,14 @@ multiple applications, the overall memory consumption is reduced as well.
     <listitem><para>Overwrite an existing cache file even if it appears to be uptodate.
     </para></listitem>
   </varlistentry>
+
+  <varlistentry>
+    <term>--index-only</term>
+    <term>-i</term>
+    <listitem><para>Don't include image data in the cache.
+    </para></listitem>
+  </varlistentry>
+
   <varlistentry>
     <term>--quiet</term>
     <term>-q</term>
