@@ -1,3 +1,8 @@
+2005-08-23  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk-update-icon-cache.xml: 
+	* gtk/gtk-update-icon-cache.1: Updates.
+
 2005-08-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/tmpl/gtktreemodel.sgml: Fix an 
